# electionpredictor

./: .env.example  .gitignore  ARCHITECTURE.md  BACKTESTING.md  CALIBRATION.md  CONTRIBUTING.md  DATA_SOURCES.md  DEPLOYMENT.md  IMPLEMENTATION_CHECKLIST.md  LICENSE_NOTES.md  METHODOLOGY.md  MODEL_CARD.md  README.md  RESEARCH_MANIFEST.md  SEQUENTIAL_LEARNING.md  SIMULATION.md  VERCEL.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  forecast.yml
api/: index.py
app/: __init__.py  backtest.py  dashboard.py  db.py  domain.py  features.py  forecast.py  index.py  main.py  model.py  redistricting.py  simulation.py  store.py
app/ingest/: __init__.py  base.py  csv_results.py  fec.py  fte_polls.py  legislators.py  medsl.py  votehub.py
data/vintage/: medsl_us_senate_2004_2024.csv
scripts/: backtest.py  forecast.py  import_csv.py  ingest.py  seed_demo.py
tests/: conftest.py  test_api.py  test_backtest.py  test_deployment.py  test_domain.py  test_features.py  test_ingest.py  test_model.py  test_simulation.py
