[project]
name = "electionpredictor"
version = "0.1.0"
description = "Demo-mode congressional election forecasting application"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
]

[tool.pytest.ini_options]
# Keep local, CI, and container collection deterministic when the package is not installed.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
